objects/Routing__c.object
<CustomObject>
    <fields>
        <fullName>All_clients_results_holds__c</fullName>
        <label>All clients results holds</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Related_Holds_Type__c</fullName>
        <label>Case Related Holds Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Clients</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_a_case_using__c</fullName>
        <label>Create a case using</label>
        <picklist>
            <picklistValues>
                <fullName>Site ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Don_t_Require_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to exempt the Candidate as a required field</description>
        <label>Don&apos;t Require Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Category_Name__c</fullName>
        <label>Final Category Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Sub_categories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Sub categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Cases_Button__c</fullName>
        <label>Import Cases Button</label>
        <picklist>
            <picklistValues>
                <fullName>VSS Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotList Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_search__c</fullName>
        <label>Knowledge search</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVP_number__c</fullName>
        <label>MVP number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Reschedule_Button__c</fullName>
        <label>Mass Reschedule Button</label>
        <picklist>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotList Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Missing_Results_Button__c</fullName>
        <label>Missing Results Button</label>
        <picklist>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotList Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Persona_s_that_create_the_case__c</fullName>
        <label>Persona&apos;s that create the case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personas_that_work_the_case__c</fullName>
        <label>Personas that work the case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Lists__c</fullName>
        <label>Related Lists</label>
        <picklist>
            <picklistValues>
                <fullName>Case Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Require_Candidate_Picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is configured as part of the case process and requires the selection of a candidate for a Console entry on the CreateCasePOC page.</description>
        <inlineHelpText>Checking this checkbox makes the field required on the Case process Start page</inlineHelpText>
        <label>Require Candidate Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_10_create_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 10 create only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_10_field_set__c</fullName>
        <label>Section 10 field set</label>
        <picklist>
            <picklistValues>
                <fullName>Add_new_user_lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator_error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator_error_or_misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allowed_to_test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup_biometrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_able_to_complete_exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_Misconduct_Channel_Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_was_late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_routed_to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_fields2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check_number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_test_publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_VSSL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_did_not_complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_submitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_vssl2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation_report_card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essay_rescore_request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam_allowed_to_time_out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow_up_with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment_all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware_issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section_10_header__c</fullName>
        <label>Section 10 header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_10_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox to hide section from external users</inlineHelpText>
        <label>Section 10 hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_1_create_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 1 create only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_1_field_set__c</fullName>
        <label>Section 1 field set</label>
        <picklist>
            <picklistValues>
                <fullName>Add_new_user_lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator_error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator_error_or_misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allowed_to_test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup_biometrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_able_to_complete_exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_Misconduct_Channel_Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_was_late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_fields2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check_number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_test_publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_VSSL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_did_not_complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_submitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_vssl2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation_report_card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essay_rescore_request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam_allowed_to_time_out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow_up_with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment_all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware_issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section_1_header__c</fullName>
        <label>Section 1 header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_1_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox to hide from External Users</inlineHelpText>
        <label>Section 1 hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_2_create_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section 2 create only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_2_field_set__c</fullName>
        <label>Section 2 field set</label>
        <picklist>
            <picklistValues>
                <fullName>Add_new_user_lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator_error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator_error_or_misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allowed_to_test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup_biometrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_able_to_complete_exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_Misconduct_Channel_Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_was_late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_field3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case_standard_fields2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check_number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_test_publisher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint_about_content_VSSL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_did_not_complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_submitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_vssl2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation_report_card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essay_rescore_request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam_allowed_to_time_out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow_up_with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment_all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware_issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section_2_header__c</fullName>
        <label>Section 2 header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section_2_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox to hide from external users</inlineHelpText>
        <label>Section 2 hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Candidate_Picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for configuration of the case processes to affect the view on CreateCasePOC.  Checking this checkbox populates the list of candidates for a site</description>
        <inlineHelpText>This is for the console views.  It shows the Candidate picklist when checked</inlineHelpText>
        <label>Show Candidate Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic:</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Business_Process__c</columns>
        <columns>Section_1_field_set__c</columns>
        <columns>Section_2_field_set__c</columns>
        <columns>Section_3_field_set__c</columns>
        <columns>Section_4_field_set__c</columns>
        <columns>Section_5_field_set__c</columns>
        <columns>Section_6_field_set__c</columns>
        <columns>Section_7_field_set__c</columns>
        <columns>Section_8_field_set__c</columns>
        <columns>Section_9_field_set__c</columns>
        <columns>Section_10_field_set__c</columns>
        <columns>Related_Lists__c</columns>
        <columns>Final_Category_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Routing_Records</fullName>
        <columns>NAME</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Business_Process__c</columns>
        <columns>Section_1_field_set__c</columns>
        <columns>Section_2_field_set__c</columns>
        <columns>Section_3_field_set__c</columns>
        <columns>Section_4_field_set__c</columns>
        <columns>Section_5_field_set__c</columns>
        <columns>Section_6_field_set__c</columns>
        <columns>Section_7_field_set__c</columns>
        <columns>Section_8_field_set__c</columns>
        <columns>Section_9_field_set__c</columns>
        <columns>Section_10_field_set__c</columns>
        <columns>Related_Lists__c</columns>
        <columns>Final_Category_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Routing Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Incomplete_Routing_Records</fullName>
        <columns>NAME</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Business_Process__c</columns>
        <columns>Section_1_field_set__c</columns>
        <columns>Section_2_field_set__c</columns>
        <columns>Section_3_field_set__c</columns>
        <columns>Section_4_field_set__c</columns>
        <columns>Section_5_field_set__c</columns>
        <columns>Section_6_field_set__c</columns>
        <columns>Section_7_field_set__c</columns>
        <columns>Section_8_field_set__c</columns>
        <columns>Section_9_field_set__c</columns>
        <columns>Section_10_field_set__c</columns>
        <columns>Related_Lists__c</columns>
        <columns>Final_Category_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Process__c</field>
            <operation>equals</operation>
        </filters>
        <label>Incomplete Routing Records</label>
    </listViews>
    <listViews>
        <fullName>Tyler_Records</fullName>
        <columns>NAME</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Business_Process__c</columns>
        <columns>Section_1_field_set__c</columns>
        <columns>Section_2_field_set__c</columns>
        <columns>Section_3_field_set__c</columns>
        <columns>Section_4_field_set__c</columns>
        <columns>Section_5_field_set__c</columns>
        <columns>Section_6_field_set__c</columns>
        <columns>Section_7_field_set__c</columns>
        <columns>Section_8_field_set__c</columns>
        <columns>Section_9_field_set__c</columns>
        <columns>Section_10_field_set__c</columns>
        <columns>Related_Lists__c</columns>
        <columns>Final_Category_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>contains</operation>
            <value>registration</value>
        </filters>
        <label>Tyler Records</label>
    </listViews>
    <nameField>
        <label>Routing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing</pluralLabel>
    <recordTypes>
        <fullName>Main_MVP</fullName>
        <active>true</active>
        <label>Main MVP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Steps_Stages</fullName>
        <active>true</active>
        <label>Steps/Stages</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>